# teamcv_ch3

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: view.rviz
doc/: libvot_instructions.md
launch/: read_data.launch
scripts/: dump_data.py  dump_gps_interp.py  dump_gps_interp_2_3.py  dump_images.py  dump_images_2_3.py  dump_images_and_gps_interp_2_3.py  extract_GPS_keyframes_regular_distance.py  extract_data.py  extract_gps.py  extract_gps.py~  extract_gps_ch2_train.py  extract_image_keyframes_regular_distance.py
scripts/Ch2-Train/: dump_images_and_gps_interp_ch2_train.py  dump_images_ch2_train.py  extract_gps_ch2_train.py
scripts/udacity-datasetElCamino/: dump_gps_interp_2_3.py
scripts/udacity-datasetElCaminoBack/: dump_images_and_gps_interp_2_3_udacity-datasetECaminoBack.py  dump_images_udacity-datasetElCaminoBack.py
src/: keypoints_matching.cpp  main.cpp  view.cpp
src/test/: CMakeLists.txt  instruction.mk  test_detect_bow.cpp  test_train_bow.cpp
